package seedu.address.model.person;

import static java.util.Objects.requireNonNull;
import static seedu.address.commons.util.AppUtil.checkArgument;

import java.util.Optional;

/**
 * Represents a Person's payment status.
 * Guarantees: immutable; value is either {@code PAID} or {@code UNPAID},
 * and must be valid as checked by {@link #isValidPaymentStatus(Optional)}.
 */
public class PaymentStatus {

    /**
     * Enumerates the possible values of a student's payment status.
     * A student is either marked as {@code PAID} or {@code UNPAID}.
     */
    public enum PaymentStatusValue {
        PAID, UNPAID;

        @Override
        public String toString() {
            return this == PAID ? "paid" : "unpaid";
        }
    }

    public static final String MESSAGE_CONSTRAINTS =
            "If PaymentStatus s/ is included, it can only take 'paid' or 'unpaid' values";
    public static final String MESSAGE_OVERPAID = "Unsuccessful as already overpaid / no outstanding lessons to pay";
    public static final String OVERFLOW = "The number of outstanding lessons can not exceed 1 million \n"
            + "The payment update is aborted";
    public static final int ZERO_OUTSTANDING_PAYMENTS = 0;
    private final int outstandingLessonPayments;

    public PaymentStatus(int outstandingLessonPayments) {
        this.outstandingLessonPayments = outstandingLessonPayments;
    }

    /**
     * Converts an Optional&lt;String&gt; into an PaymentStatus.
     */
    public static Optional<PaymentStatusValue> fromOptionalString(Optional<String> optionalString) {
        requireNonNull(optionalString);
        checkArgument(isValidPaymentStatus(optionalString), MESSAGE_CONSTRAINTS);

        String status = optionalString.get().trim().toLowerCase();
        switch (status) {
        case "paid":
            return Optional.of(PaymentStatusValue.PAID);
        case "unpaid":
            return Optional.of(PaymentStatusValue.UNPAID);
        default:
            throw new IllegalArgumentException(MESSAGE_CONSTRAINTS);
        }
    }

    /**
     * Returns a new {@code PaymentStatus} updated with the given {@code newStatus} value.
     * Guarantees: immutable;
     * @param newStatus {@code newStatus} value determines PaymentStatus action to perform.
     * @return A new {@code PaymentStatus} if {@code PaymentStatusValue} provided,
     *     else returns same {@code PaymentStatusValue}
     */
    public PaymentStatus update(Optional<PaymentStatusValue> newStatus) {
        requireNonNull(newStatus);

        if (newStatus.isEmpty()) {
            return this;
        }

        return update(newStatus.get());
    }

    /**
     * Returns a new {@code PaymentStatus} updated with the given {@code newStatus} value.
     * Guarantees: immutable;
     * @param newStatus {@code newStatus} value determines PaymentStatus action to perform.
     * @return A new {@code PaymentStatus} if {@code PaymentStatusValue} provided,
     *     else returns same {@code PaymentStatusValue}
     */
    public PaymentStatus update(PaymentStatusValue newStatus) {
        requireNonNull(newStatus);

        return switch (newStatus) {
        case PAID -> this.paid();
        case UNPAID -> this.unpaid();
        };
    }

    private PaymentStatus paid() {
        return new PaymentStatus(outstandingLessonPayments - 1);
    }

    private PaymentStatus unpaid() {
        return new PaymentStatus(outstandingLessonPayments + 1);
    }

    public int getOutstandingLessonPayments() {
        return this.outstandingLessonPayments;
    }

    /**
     * Check if string value can be parsed as an integer so that {@code PaymentStatus} can be instantiated.
     */
    public static boolean isValidPaymentStatus(String paymentStatus) {
        paymentStatus = paymentStatus.trim();
        try {
            Integer.parseInt(paymentStatus);
            return true;
        } catch (NumberFormatException e) {
            return false;
        }
    }

    /**
     * Returns true if statusString is valid.
     */
    public static boolean isValidPaymentStatus(Optional<String> statusString) {
        requireNonNull(statusString);
        if (statusString.isEmpty()) {
            return false;
        }
        String str = statusString.get().trim().toLowerCase();
        return str.equals("paid") || str.equals("unpaid");
    }

    @Override
    public boolean equals(Object other) {
        if (other == this) {
            return true;
        }

        // instanceof handles nulls
        if (!(other instanceof PaymentStatus)) {
            return false;
        }

        PaymentStatus otherPaymentStatus = (PaymentStatus) other;
        return this.getOutstandingLessonPayments() == otherPaymentStatus.getOutstandingLessonPayments();
    }

    @Override
    public String toString() {
        if (outstandingLessonPayments == 0) {
            return "All lessons have been paid";
        } else if (outstandingLessonPayments < 0) {
            int overpaidCount = -outstandingLessonPayments;
            return overpaidCount + " overpaid lessons";
        } else {
            if (outstandingLessonPayments == 1) {
                return outstandingLessonPayments + " unpaid lesson";
            }
            return outstandingLessonPayments + " unpaid lessons";
        }
    }

    public static PaymentStatus getZeroPaymentStatus() {
        return new PaymentStatus(ZERO_OUTSTANDING_PAYMENTS);
    }
}
